# water-data-assessment

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile
airflow/dags/: upload_to_postgres_taskflow.py
backend/: Dockerfile  README.md  backend.env
backend/app/: main.py
backend/app/api/endpoints/: consumption.py  water_points.py
backend/app/core/: config.py
backend/app/crud/: consumption.py  water_point.py
backend/app/db/: session.py
backend/app/models/: consumption.py  water_point.py
backend/app/schemas/: consumption.py  water_point.py
dataset/: Uduma_sample_data.csv
db/: init.sql
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/api/: axiosClient.ts  consumption.ts  waterPoints.ts
frontend/src/components/: ConsumptionChart.tsx  WaterPointsMap.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: models.ts
notebooks/: data_exploration.ipynb
